force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Visit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the call in which the sales document has been created.</description>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>