force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Warehouse__c</fullName>
    <description>The warehouse from which the customer will be delivered.</description>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>55001</fullName>
            </value>
            <value>
                <fullName>55002</fullName>
            </value>
            <value>
                <fullName>55003</fullName>
            </value>
            <value>
                <fullName>55004</fullName>
            </value>
            <value>
                <fullName>5505</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>