force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Wholesaler of the Account</description>
    <label>Wholesaler</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Wholesaler)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>