force-app/main/default/objects/cgcloud__Order__c/validationRules/cgcloud__Order_Template_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Order_Template_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( cgcloud__Order_Template__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Order_Template__c</errorDisplayField>
    <errorMessage>The Order Template can&apos;t be empty.</errorMessage>
</ValidationRule>