force-app/main/default/objects/cgcloud__Order__c/validationRules/cgcloud__Wholesaler_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Wholesaler_Not_Empty</fullName>
    <active>true</active>
    <description>Validates if Wholesaler is empty when it is required in order template.</description>
    <errorConditionFormula>AND(cgcloud__Order_Template__r.cgcloud__Wholesaler_Required__c, ISBLANK(cgcloud__Wholesaler__c), ISPICKVAL( cgcloud__Phase__c , &quot;Released&quot;))</errorConditionFormula>
    <errorMessage>No valid Wholesalers have been found for the Order Customer.</errorMessage>
</ValidationRule>