force-app/main/default/objects/cgcloud__Order__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Order_Id__c</columns>
    <columns>cgcloud__Responsible__c</columns>
    <columns>cgcloud__Order_Account__c</columns>
    <columns>cgcloud__Order_Template__c</columns>
    <columns>cgcloud__Order_Date__c</columns>
    <columns>cgcloud__Phase__c</columns>
    <columns>cgcloud__Calculation_Schema__c</columns>
    <columns>cgcloud__Value__c</columns>
    <columns>cgcloud__Gross_Total_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>